--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -60,6 +60,7 @@ $green-500: #22c55e;
 $font-heading: var(--font-outfit), sans-serif;
 $font-body: var(--font-dm-sans), sans-serif;
 $font-mono: var(--font-jetbrains-mono), monospace;
+$font-arabic: var(--font-arabic), serif;
 
 // Font sizes
 $text-xs: 0.75rem;
